<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp">
        <Button
                android:id="@+id/txtBack"
                android:gravity="start|center_vertical"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:text="@string/back"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@android:color/white"/>
        <Button
                android:id="@+id/txtEdit"
                android:gravity="end|center_vertical"
                android:background="@null"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:text="@string/edit"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textColor="@android:color/white"/>
    </androidx.appcompat.widget.Toolbar>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical"
                  android:background="#42f4df">
        <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:civ_border_color="#EEEEEE"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="#8BC34A"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_user_icon"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"/>
    </LinearLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_marginTop="5dp" android:layout_height="wrap_content">
        
        <TextView
                android:id="@+id/txtFirstNameHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/frstName" android:textColor="@android:color/darker_gray"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_centerVertical="true"/>
        <EditText
                android:id="@+id/txtFirstName"
                android:layout_toEndOf="@id/txtFirstNameHint"
                android:layout_toRightOf="@id/txtFirstNameHint"
                android:layout_width="match_parent" android:background="@null" android:layout_height="wrap_content"
                android:text="@string/mobile" android:textColor="@android:color/black"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:textAppearance="@android:style/TextAppearance.Medium"/>
    </RelativeLayout>
    <View android:layout_width="match_parent" android:layout_marginStart="25dp"
          android:layout_marginLeft="25dp"
          android:layout_height="1dp" android:layout_marginTop="15dp" android:background="@android:color/darker_gray"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_marginTop="5dp" android:layout_height="wrap_content">
        
        <TextView
                android:id="@+id/txtLastNameHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lstName" android:textColor="@android:color/darker_gray"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"/>
        <EditText
                android:id="@+id/txtLastName"
                android:layout_toEndOf="@id/txtLastNameHint"
                android:layout_toRightOf="@id/txtLastNameHint"
                android:layout_width="match_parent" android:background="@null" android:layout_height="wrap_content"
                android:text="@string/mobile" android:textColor="@android:color/black"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:textAppearance="@android:style/TextAppearance.Medium"/>
    </RelativeLayout>
    <View android:layout_width="match_parent" android:layout_marginStart="25dp"
          android:layout_marginLeft="25dp"
          android:layout_height="1dp" android:layout_marginTop="15dp" android:background="@android:color/darker_gray"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_marginTop="5dp" android:layout_height="wrap_content">
        
        <TextView
                android:id="@+id/txtIDHint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile" android:textColor="@android:color/darker_gray"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:layout_centerVertical="true"/>
        <EditText
                android:id="@+id/txtID"
                android:layout_toEndOf="@id/txtIDHint"
                android:layout_toRightOf="@id/txtIDHint"
                android:layout_width="match_parent" android:background="@null" android:layout_height="wrap_content"
                android:text="@string/mobile" android:textColor="@android:color/black"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:textAppearance="@android:style/TextAppearance.Medium"/>
    </RelativeLayout>
    <View android:layout_width="match_parent" android:layout_marginStart="25dp"
          android:layout_marginLeft="25dp"
          android:layout_height="1dp" android:layout_marginTop="15dp" android:background="@android:color/darker_gray"/>
</LinearLayout>